--- a/writing/nips_cog_insp_AI/lampinen_one_shot_words.tex
+++ b/writing/nips_cog_insp_AI/lampinen_one_shot_words.tex
@@ -85,10 +85,25 @@ In order to test our one-shot word-learning algorithm on the Penn Treebank, we c
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{../../results/10perms_delta_perplexity.png}
-\caption{Percent change in perplexity on 10 test sentences containing new word, plotted vs. the number of training sentences, across four different words, comparing optimizing from three different starting points to centroid and training with the words baseline. (Note that the full training with the word was only run with all 10 training sentences.)}
+\caption{Percent change in perplexity on 10 test sentences containing new word, plotted vs. the number of training sentences, across four different words, comparing optimizing from three different starting points to centroid and training with the word baselines. Averages across 10 permutations are shown in the dark lines, the individual results are shown in light lines. (Note that the full training with the word was only run once, with a single permutation of all 10 training sentences.)}
 \label{main_results_1}
 \end{figure}
+We first evaluated our approach on the words ``bonuses,'' ``explained,'' ``marketers,'' and ``strategist,'' either initializing from the current embedding for the word (after never seeing it), the zero vector, or the centroid of the surrounding words, and compared to the baselines of just taking the centroid of the surrounding words and full training with the words, see Fig. \ref{main_results_1}. Optimizing from the centroid was clearly the best approach, it outperforms all other approaches for learning a new word for all datasets, including the centroid approach \citet{Lazaridou2017}, and even outperforms full training with the word in three of the four cases (however, this likely comes with a tradeoff, see below). The optimizing approaches are strongly affected by embedding initialization with few training sentences (e.g. one-shot learning), but by 10 sentences they all perform quite similarly. \par
+Next, we 
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{../../results/10perms2_delta_perplexity.png}
+\caption{Percent change in perplexity on 10 test sentences containing new word, plotted vs. the number of training sentences, across four different words, comparing optimizing from the centroid to just taking the centroid and training with the word baselines.}
+\label{main_results_2}
+\end{figure}
 
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{../../results/skipping_by_word.png}
+\caption{Comparing optimizing the input embedding, output embedding, or both -- where is the magic happening?}
+\label{skipping_results}
+\end{figure}
 
 \section{Discussion}
 
