--- a/writing/nips_cog_insp_AI/lampinen_one_shot_words.tex
+++ b/writing/nips_cog_insp_AI/lampinen_one_shot_words.tex
@@ -105,6 +105,20 @@ Next, we replicated these findings with four new words (``borrow,'' ``cowboys'',
 \label{skipping_results}
 \end{figure}
 
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{../../results/10perms2_cost_to_others.png}
+\caption{Unfortunately this interferes with performance on other words}
+\label{interference}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{../../results/10perms5_replay_cost_to_others.png}
+\caption{This interference can be substantially ameliorated by using a small replay buffer}
+\label{ameliorating_interference}
+\end{figure}
+
 \section{Discussion}
 
 \section{Conclusions}
